# search-smith

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: Makefile
docs/source/: api.rst  conf.py  configuration.rst  development.rst  index.rst  usage.rst
src/search_smith/: __init__.py  cli.py  exceptions.py  models.py  search.py
src/search_smith/providers/: __init__.py  base.py  brave.py
tests/: test_brave.py  test_cli.py  test_models.py  test_search.py
