[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "search-smith"
version = "0.1.0"
description = "A small provider-neutral web search abstraction with Brave Search support."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Eiichi YAMAMOTO", email = "info@yeiichi.com"},
]
keywords = ["search", "brave", "web-search", "retrieval", "fact-checking"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
docs = [
  "sphinx>=8,<9",
  "furo>=2025.7.19",
]
dev = [
  "pytest>=8,<9",
  "ruff>=0.6,<1",
  "python-semantic-release>=9,<10",
  "build>=1.2,<2",
]

[project.scripts]
search-smith = "search_smith.cli:main"

[project.urls]
Homepage = "https://github.com/yeiichi/search-smith"
Documentation = "https://search-smith.readthedocs.io/"
Repository = "https://github.com/yeiichi/search-smith"
Issues = "https://github.com/yeiichi/search-smith/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/search_smith"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/pyproject.toml",
]
exclude = [
  "/.venv",
  "/.uv-cache",
  "/dist",
  "/docs/build",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "python -m pip install uv && $(dirname $(python -c 'import sys; print(sys.executable)'))/uv lock && $(dirname $(python -c 'import sys; print(sys.executable)'))/uv build"
assets = ["uv.lock"]
tag_format = "v{version}"
allow_zero_version = true
major_on_zero = false
commit_message = "chore(release): {version}"
changelog_file = "CHANGELOG.md"

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "ruff>=0.6,<1",
  "python-semantic-release>=9,<10",
  "build>=1.2,<2",
]
docs = [
  "sphinx>=8,<9",
  "furo>=2025.7.19",
]
